# pdf

./: .gitignore  Cargo.toml  NOTES.md
examples/: simple.rs
pdf-filters/: Cargo.toml
pdf-filters/src/: error.rs  lib.rs  util.rs
pdf-par-ser/: Cargo.toml
pdf-par-ser/src/: document.rs  error.rs  file.rs  lib.rs  linear.rs  primitive.rs  stream.rs  util.rs  xref.rs
src/: document.rs  error.rs  file.rs  filter.rs  lib.rs  primitive.rs  reader.rs  stream.rs  xref.rs
