[package]
name = "pdf"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]

[dependencies]
nom = { version = "*", features = ["verbose-errors"] }
pdf-par-ser = { path = "./pdf-par-ser", version = "*" }
pdf-filters = { path = "./pdf-filters", version = "*" }
error-chain = "*"
bigdecimal = "*"
num = "*"
itertools = "*"
memmap = "*"
log = "*"

[dev-dependencies]
pretty_env_logger = "*"

[workspace]
